@@ -916,8 +916,7 @@ SGI O2:
 		GBE_CMODE_RGB10 etc from openbsd's header file?
 
 	CRIME interrupt controller:
-		1) rewrite to nicer register-style rather than byte-style access.
-		2) better memory bank representation, so that other sizes than
+		better memory bank representation, so that other sizes than
 			128 MB RAM can be emulated
 
 	audio?
